Migrated code base to Spring Boot 3 - commented out micronaut in settings.gradle